--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "description": "",
   "scripts": {
     "start": "node index.js",
-     "heroku-postbuild": "npm install puppeteer --unsafe-perm=true --allow-root"
-  },
+    "heroku-postbuild": "npm install puppeteer puppeteer-extra puppeteer-extra-plugin-stealth --unsafe-perm=true --allow-root && npx puppeteer browsers install chrome"  },
   "dependencies": {
     "axios": "^0.27.2",
     "chance": "^1.1.11",
