--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "description": "",
   "scripts": {
     "start": "node index.js",
-     "heroku-postbuild": "npm install puppeteer-core puppeteer-extra puppeteer-extra-plugin-stealth "},
+    "heroku-postbuild": "mkdir ./.cache && mv /app/.cache/puppeteer ./.cache"},
   "dependencies": {
     "axios": "^0.27.2",
     "chance": "^1.1.11",
