--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "description": "",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "node index.js",
      "heroku-postbuild": "./can.sh"},
