--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "scripts": {
     "start": "node index.js",
-     "heroku-postbuild": "./can.sh"},
+     "heroku-postbuild": "npx install puppeteer"},
   "dependencies": {
     "axios": "^0.27.2",
     "chance": "^1.1.11",
