--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "chance": "^1.1.11",
+    "express": "^4.18.3",
     "cheerio": "^1.0.0",
     "mongoose": "^8.5.0",
     "node-telegram-bot-api": "^0.64.0",
