--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "description": "",
 
   "scripts": {
-    "start": "node index.js",
-     "heroku-postbuild": "npx install puppeteer"},
+    "start": "node index.js"},
   "dependencies": {
     "axios": "^0.27.2",
     "chance": "^1.1.11",
